Update + Search Discount

--- a/Bookstore_management_system/App.config
+++ b/Bookstore_management_system/App.config
@@ -11,11 +11,8 @@
       </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Bookstore_management_system.Properties.Settings.conn"
-      connectionString="Data Source=LAPTOP-EFN5URJM\SQLEXPRESS;Initial Catalog=BookShop;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
-    <add name="BookShopEntities3" connectionString="metadata=res://*/BookStoreModel.csdl|res://*/BookStoreModel.ssdl|res://*/BookStoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EFN5URJM\SQLEXPRESS     ;initial catalog=BookShop;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
+    <add name="Bookstore_management_system.Properties.Settings.conn" connectionString="Data Source=DESKTOP-HDGJ7CJ\SQLEXPRESS;Initial Catalog=BookShop;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="BookShopEntities3" connectionString="metadata=res://*/BookStoreModel.csdl|res://*/BookStoreModel.ssdl|res://*/BookStoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-HDGJ7CJ\SQLEXPRESS     ;initial catalog=BookShop;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
